--- a/sog/build.xml
+++ b/sog/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
- !  SOG build file
+ !   SOG build file
  !
  !   This file describes how to build the SOG package from a source
  !   release. It requires Apache ANT and a Java Development Kit.
@@ -25,9 +25,7 @@
  !      javadocs         -> creates the API documentation
  !      javadoc-sources  -> does nothing
  !      test             -> run up SOG from local build
- !!
- !! test targets yet to be done.
- !!
+ !
  !   Authors:
  !      Peter W. Draper (9-JUL-2002)
  !
@@ -68,8 +66,12 @@
   <property name="star.build.dir" value="${basedir}/../"/>
 
   <!-- Directory that any archives should be placed into. The local
-   !   directort by default -->
+   !   directory by default -->
   <property name="star.archive.dir" value="${basedir}"/>
+
+  <!-- URL and package-list for linking against full Java docs -->
+  <property name="javaapi.url" value="http://java.sun.com/j2se/1.4/docs/api/"/>
+  <property name="javaapi.lis" value="${star.build.dir}/src/docs/javaapi/"/>
 
   <!--
    !  ================
@@ -166,14 +168,14 @@
    !-->
 
   <!-- Name all the jar files that we directly depend on. These will be
-   !   used to produce a full CLASSPATH that is equivalent to that 
+   !   used to produce a full CLASSPATH that is equivalent to that
    !   generated when these are referenced as optional bundled packages.
    !   It's best to have a classpath (rather than use the extension
    !   mechanism) during development as this allows us to compile
-   !   without having to work these dependencies out anyway (may 
+   !   without having to work these dependencies out anyway (may
    !   be fixed in Java1.5) plus we can execute against locally built
    !   class files in preference to installed ones (an extra user-define
-   !   defined CLASSPATH can also be used as needed). 
+   !   defined CLASSPATH can also be used as needed).
    !-->
   <extclasspath id="installed.classpath">
 
@@ -186,6 +188,9 @@
     <!-- HDX -->
     <pathelement location="${star.jar.dir}/hdx/hdx.jar"/>
 
+    <!-- JAIUtil -->
+    <pathelement location="${star.jar.dir}/jaiutil/jaiutil.jar"/>
+
     <!-- JSky -->
     <pathelement location="${star.jar.dir}/jsky/jsky.jar"/>
 
@@ -193,7 +198,7 @@
     <pathelement location="${star.jar.dir}/soapserver/soapserver.jar"/>
 
   </extclasspath>
-  
+
   <!-- Generate the local build classpath. This is the most difficult
    !   part of handling the classpath. The local classes will be in
    !   the "build/classes" part of each package, plus third party
@@ -230,13 +235,13 @@
 
   <path id="built.classpath">
 
+    <!-- Local third party jars -->
+    <path refid="package.jars"/>
+
     <!-- All locally built classes -->
     <dirset dir="${star.build.dir}">
       <include name="*/build/classes"/>
     </dirset>
-
-    <!-- Local third party jars -->
-    <path refid="package.jars"/>
 
     <!-- Directly dependent third party jars -->
     <path refid="built.jarpath"/>
@@ -250,23 +255,23 @@
     <!-- Note in passing a more elegant way to resolve these jars
      !   would be to extend <extclasspath> to go looking for dependent
      !   jars using an additional URL resolving mechanism-->
-  
+
   </path>
 
-  <!-- Extra user-defined classpath. This is set by the property 
-   !   "extra.class.path" (which can be defined locally using say 
+  <!-- Extra user-defined classpath. This is set by the property
+   !   "extra.class.path" (which can be defined locally using say
    !   -Dextra.class.path=$CLASSPATH on the command line or by setting
    !   the property in either of the properties files.-->
   <property name="extra.class.path" value=""/>
   <path id="local.classpath" path="${extra.class.path}"/>
-  
+
   <!-- Unification of all classpaths using extra, built, installed order-->
   <path id="classpath">
     <path refid="local.classpath"/>
     <path refid="built.classpath"/>
     <path refid="installed.classpath"/>
   </path>
-    
+
   <!-- JUnit tests classpath -->
   <path id="tests-classpath">
     <pathelement location="${build.classes}"/>
@@ -275,7 +280,7 @@
     <pathelement location="${tests.etc.dir}"/>
     <path refid="classpath"/>
   </path>
-  
+
   <!-- Turn this path into a string which is passed to the tests -->
   <property name="tests-classpath.value" refid="tests-classpath"/>
 
@@ -288,7 +293,7 @@
    ! If any of the required dependencies are not present then
    ! this throws a <fail> and exits the build.
    !-->
-  <target name="check_packages" 
+  <target name="check_packages"
           unless="runonly.install">
 
     <!--  Need NDArray -->
@@ -311,6 +316,13 @@
                classname="uk.ac.starlink.hdx.HdxContainer"/>
 
     <fail message="No HDX available" unless="hdx.present"/>
+
+    <!--  Need JAIUtil -->
+    <available property="jaiutil.present"
+               classpathref="classpath"
+               classname="uk.ac.starlink.jaiutil.HDXCodec"/>
+
+    <fail message="No JAIUtil available" unless="jaiutil.present"/>
 
     <!--  Need JSky -->
     <available property="jsky.present"
@@ -430,8 +442,8 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Main-Class" value="uk.ac.starlink.sog.SOG"/>
-        <attribute name="Class-Path" 
-                   value="../jsky/jsky.jar ../oldarray/array.jar ../hdx/hdx.jar ../jniast/jniast.jar ../soapserver/soapserver.jar"/>
+        <attribute name="Class-Path"
+                   value="../jsky/jsky.jar ../oldarray/array.jar ../hdx/hdx.jar ../jaiutil/jaiutil.jar ../jniast/jniast.jar ../soapserver/soapserver.jar"/>
       </manifest>
     </jar>
   </target>
@@ -495,7 +507,7 @@
    !  The archives are designed to be unpacked such that the resultant
    !  directory layout can be either used as a local distribution, or
    !  installed into a Starlink tree (installation requires the
-   !  Starlink modified version of ANT, use as a local distribution 
+   !  Starlink modified version of ANT, use as a local distribution
    !  may need special handling of the extension path). This version
    !  can also be used to rebuild the package from source.
    !
@@ -622,9 +634,9 @@
       </tarfileset>
     </tar>
 
-    <gzip zipfile="${star.archive.dir}/${archive.name}.tar.gz" 
+    <gzip zipfile="${star.archive.dir}/${archive.name}.tar.gz"
           src="${archive.name}.tar"/>
-    <bzip2 zipfile="${star.archive.dir}/${archive.name}.tar.bz2" 
+    <bzip2 zipfile="${star.archive.dir}/${archive.name}.tar.bz2"
            src="${archive.name}.tar"/>
     <delete file="${archive.name}.tar"/>
 
@@ -682,8 +694,8 @@
                 logfileAppend="false">
       <fileset dir="${dist.bin}"/>
     </loggedcopy>
-  
-    <!-- Also remove the package-specific directory. 
+
+    <!-- Also remove the package-specific directory.
      !   Note exact format is required.-->
     <echo file="${install.log}" append="true">${star.bin.pkg}
 </echo>
@@ -772,7 +784,7 @@
 
   <!-- Real deinstall target. Only activated if "install.log.present"
    !   is defined -->
-  <target name="real_deinstall" 
+  <target name="real_deinstall"
           if="install.log.present">
 
     <loadfile property="files" srcFile="${install.log}"/>
@@ -808,11 +820,15 @@
              doctitle="${Name}"
              classpathref="classpath">
 
-      <!-- Exclude broken and test files etc. from the document -->
-      <fileset dir="src/main" defaultexcludes="yes">
-          <exclude name="**/images/**"/>
-          <exclude name="**/deploy.wsdd"/>
-      </fileset>
+      <!-- Get a list of directories that name all the potential
+       !   java packages -->
+      <packageset dir="${java.dir}" defaultexcludes="yes">
+         <include name="**"/>
+      </packageset>
+
+      <!-- Link to the full Java API at SUNs website -->
+      <link offline="true" href="${javaapi.url}"
+            packagelistLoc="${javaapi.lis}"/>
 
       <group title="${Name} API" packages="${package.name}*"/>
 
@@ -855,7 +871,7 @@
           depends="build"
           if="junit.present">
     <mkdir dir="${build.tests}"/>
-    
+
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
