--- a/axis/webapps/axis/WEB-INF/web.xml
+++ b/axis/webapps/axis/WEB-INF/web.xml
@@ -38,8 +38,17 @@
     <url-pattern>/services/*</url-pattern>
   </servlet-mapping>
 
+ <!-- uncomment this if you want the admin servlet -->
+ <!--
+  <servlet-mapping>
+    <servlet-name>AdminServlet</servlet-name>
+    <url-pattern>/servlet/AdminServlet</url-pattern>
+  </servlet-mapping>
+ -->
   <welcome-file-list id="WelcomeFileList_1">
     <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.jws</welcome-file>
   </welcome-file-list>
 
 </web-app>
