Update for RC1 release.

--- a/axis/build.xml
+++ b/axis/build.xml
@@ -142,7 +142,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
-                   value="commons-logging.jar jaxrpc.jar log4j-core.jar tt-bytecode.jar wsdl4j.jar"/>
+                   value="axis-ant.jar commons-discovery.jar jaxrpc.jar saaj.jar commons-logging.jar log4j-1.2.4.jar wsdl4j.jar"/>
       </manifest>
       
     </jar>
