Added SPLAT to the main build file.  May not be perfectly complete, but certain public classes are used by the treeview.

--- a/build.xml
+++ b/build.xml
@@ -152,6 +152,9 @@
     
     <echo message="Executing SOG target: ${what}"/> 
     <ant dir="./sog" target="${what}"/> 
+
+    <echo message="Executing SPLAT target: ${what}"/>
+    <ant dir="./splat" target="${what}"/>
     
   </target>
   
