--- a/jaiutil/build.xml
+++ b/jaiutil/build.xml
@@ -93,7 +93,7 @@
   <property name="chmod.fail" value="false"/>
 
   <!-- JUnit test options -->
-  <property name="junit.fork" value="false"/>
+  <property name="junit.fork" value="true"/>
   <property name="junit.filtertrace" value="on"/>
   <property name="junit.summary" value="no"/>
 
