--- a/splat/build.xml
+++ b/splat/build.xml
@@ -186,7 +186,7 @@
     <pathelement location="${star.jar.dir}/jniast/jniast.jar"/>
 
     <!-- NDArray-->
-    <pathelement location="${star.jar.dir}/oldarray/array.jar"/>
+    <pathelement location="${star.jar.dir}/array/array.jar"/>
 
     <!-- HDX -->
     <!--<pathelement location="${star.jar.dir}/hdx/hdx.jar"/>-->
@@ -213,7 +213,7 @@
    !   the extra classpath.
    !-->
   <extclasspath id="built.jarpath">
-    <pathelement location="${star.build.dir}/oldarray/lib/oldarray/array.jar"/>
+    <pathelement location="${star.build.dir}/array/lib/array/array.jar"/>
     <pathelement location="${star.build.dir}/jniast/lib/jniast/jniast.jar"/>
     <!--<pathelement location="${star.build.dir}/hdx/lib/hdx/hdx.jar"/>-->
     <pathelement location="${star.build.dir}/soapserver/lib/soapserver/soapserver.jar"/>
