Modified <javac> and <junit> invocations to tolerate and use respectively assertions.  Note though that they will still be turned off during junit tests unless junit is invoked with fork.

--- a/templates/classlibrary/build.xml
+++ b/templates/classlibrary/build.xml
@@ -88,6 +88,7 @@
   <property name="debug" value="true"/>
   <property name="deprecation" value="false"/>
   <property name="optimize" value="true"/>
+  <property name="source.version" value="1.4"/>
 
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
@@ -96,6 +97,7 @@
   <property name="junit.fork" value="false"/>
   <property name="junit.filtertrace" value="on"/>
   <property name="junit.summary" value="no"/>
+  <property name="junit.assertions" value="-enableassertions"/>
 
   <!-- Directory containing the package source -->
   <property name="src.dir" value="${basedir}/src"/>
@@ -355,6 +357,7 @@
            destdir="${build.classes}"
            debug="${debug}"
            deprecation="${deprecation}"
+           source="${source.version}"
            optimize="${optimize}">
 
       <classpath refid="classpath"/>
@@ -872,6 +875,7 @@
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
+           source="${source.version}"
            deprecation="${deprecation}" >
 
       <classpath refid="tests-classpath"/>
@@ -898,6 +902,8 @@
            fork="${junit.fork}">
 
       <classpath refid="tests-classpath"/>
+
+      <jvmarg value="${junit.assertions}"/>
 
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
@@ -930,6 +936,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <classpath refid="tests-classpath"/>
+      <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
       <test name="${testcase}"/>
 
