--- a/templates/application/build.xml
+++ b/templates/application/build.xml
@@ -89,6 +89,7 @@
   <property name="debug" value="true"/>
   <property name="deprecation" value="false"/>
   <property name="optimize" value="true"/>
+  <property name="source.version" value="1.4"/>
 
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
@@ -97,6 +98,7 @@
   <property name="junit.fork" value="false"/>
   <property name="junit.filtertrace" value="on"/>
   <property name="junit.summary" value="no"/>
+  <property name="junit.assertions" value="-enableassertions"/>
 
   <!-- Directory containing the package source -->
   <property name="src.dir" value="${basedir}/src"/>
@@ -356,6 +358,7 @@
            destdir="${build.classes}"
            debug="${debug}"
            deprecation="${deprecation}"
+           source="${source.version}"
            optimize="${optimize}">
 
       <classpath refid="classpath"/>
@@ -875,6 +878,7 @@
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
+           source="${source.version}"
            deprecation="${deprecation}" >
 
       <classpath refid="tests-classpath"/>
@@ -901,6 +905,8 @@
            fork="${junit.fork}">
 
       <classpath refid="tests-classpath"/>
+
+      <jvmarg value="${junit.assertions}"/>
 
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
@@ -933,6 +939,7 @@
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
       <classpath refid="tests-classpath"/>
+      <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
       <test name="${testcase}"/>
 
