Added source=1.4 in <javadoc> tasks to enable assertions there too.

--- a/templates/application/build.xml
+++ b/templates/application/build.xml
@@ -792,6 +792,7 @@
              windowtitle="${Name} API"
              doctitle="${Name}"
              defaultexcludes="yes"
+             source="${source.version}"
              classpathref="classpath">
 
       <!-- Get a list of directories that name all the potential
